# diaryx

./: .envrc  .gitignore  .pre-commit-config.yaml  .taurignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Contributing to Diaryx.md  Diaryx.md  LICENSE.md  PHILOSOPHY.md  PLAN.md  README.md  ROADMAP.md  TESTING.md  flake.nix  install.sh  justfile  plan.md  privacy.md  release.toml  roadmap.md  rust-analyzer.toml  terms.md
crates/bookmatter/: Cargo.toml  README.md  build.rs
crates/bookmatter/bindings/bindings/: YamlValue.ts
crates/bookmatter/src/: error.rs  lib.rs  parser.rs  yaml_value.rs
crates/bookmatter/src/frontmatter/: mod.rs
crates/bookmatter/src/yaml/: value.rs
crates/crossfs/: Cargo.toml  README.md
crates/crossfs/src/: adapter.rs  error.rs  file.rs  lib.rs  memory.rs  metadata.rs  traits.rs
crates/diaryx/: Cargo.toml  README.md
crates/diaryx/src/: README.md  editor.rs  main.rs
crates/diaryx/src/cli/: README.md  account.rs  args.rs  attachment.rs  auth_client.rs  config.rs  delete.rs  edit.rs  edit_server.rs  entry.rs  export.rs  git.rs  import.rs  mod.rs  namespace.rs  normalize.rs  plugin_dispatch.rs  plugin_loader.rs  plugin_manager.rs  plugin_storage.rs  preview.rs  property.rs  publish.rs  search.rs  template.rs  util.rs  workspace.rs
crates/diaryx_ai_extism/: Cargo.toml  README.md
crates/diaryx_ai_extism/src/: chat.rs  lib.rs
crates/diaryx_apple/: Cargo.toml  README.md
crates/diaryx_apple/src/: README.md  lib.rs
crates/diaryx_ark/: Cargo.toml
crates/diaryx_ark/src/: lib.rs
crates/diaryx_cloudflare/: .gitignore  Cargo.toml  build.rs  build.sh  rust-analyzer.toml  wrangler.jsonc
crates/diaryx_cloudflare/migrations/: 0001_initial.sql  0002_content_hash.sql  0003_namespace_metadata.sql  0004_audience_gates.sql  0006_ark_source_key.sql
crates/diaryx_cloudflare/src/: config.rs  getrandom_shim.rs  handlers.rs  lib.rs  tokens.rs
crates/diaryx_cloudflare/src/adapters/: d1.rs  kv.rs  mod.rs  r2.rs  resend.rs
crates/diaryx_cloudflare_e2e/: Cargo.toml  README.md
crates/diaryx_cloudflare_e2e/src/: lib.rs
crates/diaryx_cloudflare_e2e/tests/: contract.rs  sync_plugin_e2e.rs
crates/diaryx_core/: Cargo.toml  README.md  build.rs
crates/diaryx_core/src/: README.md  backup.rs  body_template.rs  command.rs  command_handler.rs  config.rs  date.rs  diaryx.rs  entry.rs  error.rs  export.rs  frontmatter.rs  fs.rs  lib.rs  link_parser.rs  metadata_writer.rs  mint.rs  namespace.rs  publish.rs  search.rs  template.rs  test_utils.rs  types.rs  validate.rs  visibility.rs  workspace.rs  workspace_registry.rs  yaml_value.rs
crates/diaryx_core/src/auth/: README.md  (+4 more)
crates/diaryx_core/tests/: crdt_fs_trait_parity.rs  crdt_sync_parity.rs  sync_integration_test.rs  yaml_parity.rs
crates/diaryx_daily/: Cargo.toml  README.md
crates/diaryx_daily/src/: README.md
crates/diaryx_daily_extism/: Cargo.toml  README.md
crates/diaryx_daily_extism/src/: lib.rs
crates/diaryx_extism/: Cargo.toml  README.md
crates/diaryx_extism/src/: adapter.rs  binary_protocol.rs  host_fns.rs  http_namespace_provider.rs  lib.rs  loader.rs  permission_checker.rs  plugin_fs.rs  protocol.rs  testing.rs  wasi_runner.rs  ws_transport.rs
crates/diaryx_git/: Cargo.toml  README.md
crates/diaryx_git/src/: commit.rs  lib.rs  self_healing.rs
crates/diaryx_import_extism/: Cargo.toml  README.md
crates/diaryx_math_extism/: Cargo.toml
crates/diaryx_math_extism/src/: lib.rs
crates/diaryx_native/: Cargo.toml  README.md
crates/diaryx_native/src/: config.rs  fs.rs  lib.rs
crates/diaryx_publish/: Cargo.toml  README.md
crates/diaryx_publish/src/: fs_content_provider.rs  lib.rs  plugin.rs  publisher.rs  template_render.rs  types.rs
crates/diaryx_publish_extism/: Cargo.toml  README.md
crates/diaryx_publish_extism/src/: lib.rs
crates/diaryx_render/: Cargo.toml
crates/diaryx_render/src/: appearance.rs  html.rs  html_format_css.css  lib.rs  links.rs  markdown.rs  nav.rs  page.rs  site.rs  template.rs  types.rs
crates/diaryx_server/: Cargo.toml  README.md
crates/diaryx_server/src/: README.md  audience_token.rs  domain.rs  lib.rs  ports.rs  proxy.rs
crates/diaryx_server/tests/: object_service.rs
crates/diaryx_spoiler_extism/: Cargo.toml  README.md
crates/diaryx_storage_gdrive_extism/: Cargo.toml  README.md
crates/diaryx_storage_gdrive_extism/src/: gdrive_ops.rs  lib.rs
crates/diaryx_storage_s3_extism/: Cargo.toml  README.md
crates/diaryx_storage_s3_extism/src/: lib.rs
crates/diaryx_sync/: Cargo.toml  README.md
crates/diaryx_sync/src/: attachment_sync.rs  body_doc.rs  body_doc_manager.rs  control_message.rs  conversions.rs  crdt_fs.rs  crdt_storage.rs  decorator_stack.rs  doc_manager.rs  history.rs  hooks.rs  lib.rs  local.rs  materialize.rs  memory_storage.rs  protocol.rs  protocol_types.rs  sanity.rs  self_healing.rs  server.rs  share_session.rs  sqlite_storage.rs  storage.rs  sync_client.rs  sync_handler.rs  sync_manager.rs  sync_plugin.rs  sync_protocol.rs  sync_session.rs  sync_types.rs  time.rs  types.rs  workspace_doc.rs
crates/diaryx_sync/tests/: crdt_fs_trait_parity.rs  crdt_sync_parity.rs  reconnect_body_state.rs
crates/diaryx_sync_extism/: Cargo.toml  README.md
crates/diaryx_sync_extism/src/: host_bridge.rs  lib.rs  state.rs
crates/diaryx_sync_server/: Cargo.toml  README.md
crates/diaryx_sync_server/src/: README.md  adapters.rs  blob_store.rs  config.rs  git_ops.rs  kv_client.rs  lib.rs  main.rs  proxy_adapters.rs  publish.rs  rate_limit.rs  testing.rs  tokens.rs
crates/diaryx_sync_server/tests/: api_quota.rs  contract.rs  e2e_sync.rs  http_smoke.rs  sites_api.rs
crates/diaryx_templating/: Cargo.toml  README.md
crates/diaryx_templating/src/: lib.rs
crates/diaryx_templating_extism/: Cargo.toml  README.md
crates/diaryx_templating_extism/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: build_plugin.rs  build_wasm.rs  check.rs  clean.rs  install_hooks.rs  main.rs  pre_commit.rs  publish_ios.rs  publish_macos.rs  release_plugin.rs  sync_bindings.rs  sync_marketplace.rs  sync_versions.rs  tauri.rs  update_agents_index.rs  util.rs  web.rs
(+1183 files in other folders)
