[workspace]
resolver = "2"
members = [
    "crates/diaryx_core",
    "crates/diaryx",
    "crates/diaryx_wasm",
    "crates/diaryx_daily",
    "crates/diaryx_sync",
    "crates/diaryx_sync_server",
    "crates/diaryx_extism",
    "apps/tauri/src-tauri"
]

[workspace.package]
version = "1.3.4"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/diaryx-org/diaryx"
homepage = "https://github.com/diaryx-org/diaryx"
readme = "README.md"
# PolyForm Shield is not an SPDX identifier, so we use license-file
license-file = "LICENSE.md"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
indexmap = { version = "2.0", features = ["serde"] }

# Internal crates - version must match workspace.package.version for publishing
diaryx_core = { path = "crates/diaryx_core", version = "1.3.4" }
diaryx_daily = { path = "crates/diaryx_daily", version = "1.3.0" }
diaryx_sync = { path = "crates/diaryx_sync", version = "1.3.4" }
diaryx_extism = { path = "crates/diaryx_extism", version = "1.3.0" }

# cargo-release configuration
[workspace.metadata.release]
# Shared release configuration
shared-version = true
tag-name = "v{{version}}"
tag-message = "Release v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
publish = true
push = true

[profile.release]
# LTO and single codegen-unit improve WASM size (~20-30% smaller).
# Applied workspace-wide since release builds benefit from both.
lto = "fat"
codegen-units = 1

[profile.release.package.diaryx_wasm]
# Optimize WASM for size rather than speed.
opt-level = "z"

# Patch getrandom 0.2 to let `custom` feature take priority over `js` on wasm32.
# Upstream getrandom checks `js` first, so when both features are enabled
# (yrs→fastrand→getrandom/js), the JS/wasm-bindgen backend is always selected.
# This patch swaps the priority so diaryx_wasm (which only has `js`, not
# `custom`) still uses the browser crypto backend correctly.
[patch.crates-io]
getrandom = { path = "patches/getrandom-0.2" }
