[package]
name = "bookmatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Order-preserving, round-trip metadata parser for plain text files"
keywords = ["frontmatter", "markdown", "yaml", "metadata"]
categories = ["text-processing", "parsing"]

[dependencies]
indexmap.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
# Used by Value::Display to format f64 values without pulling in
# core::num::flt2dec (Rust's stdlib Dragon4/Grisu float formatter, ~15 KB
# of WASM code).
ryu = "1"

# Optional: serde_json interop (From conversions between yaml::Value and serde_json::Value)
serde_json = { workspace = true, optional = true }

# Optional: TypeScript binding generation
ts-rs = { version = "10", features = ["serde-json-impl", "indexmap-impl", "no-serde-warnings"], optional = true }

[features]
default = []

# Enables `From<serde_json::Value>` conversions on `yaml::Value`.
json = ["dep:serde_json"]

# TypeScript binding generation (build-time only, not needed in WASM)
typescript = ["dep:ts-rs"]

[package.metadata.release]
# This crate is intended to be published to crates.io
publish = true
