[package]
name = "diaryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Command-line interface for Diaryx journal management"
keywords = ["diary", "journal", "markdown", "frontmatter", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "diaryx"
path = "src/main.rs"

[dependencies]
diaryx_core = { path = "../diaryx_core", version = "1.3.1", default-features = false, features = ["toml-config", "uuid"] }
diaryx_extism = { path = "../diaryx_extism", version = "1.3.0", optional = true, features = ["http", "ws-transport"] }
diaryx_sync = { path = "../diaryx_sync", version = "1.3.1", default-features = false, features = ["server"], optional = true }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
dirs = "6.0"
glob = "0.3"
pathdiff = "0.2"
futures-lite = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"], optional = true }
sha2 = { version = "0.10", optional = true }
ureq = "3"
urlencoding = "2.1"
ratatui = "0.30"
tui-tree-widget = "0.24"
crossterm = "0.29"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
open = { version = "5", optional = true }

[features]
default = []
edit = ["dep:diaryx_sync", "dep:tokio", "dep:axum", "dep:open"]
plugins = ["dep:diaryx_extism", "dep:tokio", "dep:axum", "dep:tower-http", "dep:open", "dep:sha2"]

[build-dependencies]
diaryx_core = { path = "../diaryx_core", version = "1.3.1", default-features = false }

[dev-dependencies]
tempfile = "3"

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/diaryx-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
