[package]
name = "diaryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Command-line interface for Diaryx journal management"
keywords = ["diary", "journal", "markdown", "frontmatter", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "diaryx"
path = "src/main.rs"

[dependencies]
diaryx_core = { workspace = true }
diaryx_extism = { workspace = true, optional = true, features = ["http", "ws-transport"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
dirs = "6.0"
glob = "0.3"
pathdiff = "0.2"
futures-lite = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"], optional = true }
sha2 = { version = "0.10", optional = true }
ureq = "3"
urlencoding = "2.1"
ratatui = "0.30"
tui-tree-widget = "0.24"
crossterm = "0.29"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
open = { version = "5", optional = true }
tempfile = { version = "3", optional = true }

[features]
default = ["plugins", "edit"]
edit = ["dep:tokio", "dep:axum", "dep:tower-http", "dep:open"]
plugins = ["dep:diaryx_extism", "dep:tokio", "dep:axum", "dep:tower-http", "dep:open", "dep:sha2", "dep:tempfile"]

[build-dependencies]
diaryx_core = { workspace = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/diaryx-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
