[package]
name = "diaryx_ai_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "AI chat assistant Extism guest plugin for Diaryx"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
