[package]
name = "diaryx_apple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "UniFFI bindings and Apple-focused bridge crate for diaryx_core"
keywords = ["diary", "journal", "swift", "uniffi", "ios"]
categories = ["api-bindings"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
diaryx_core.workspace = true
futures-lite = "2"
thiserror.workspace = true
uniffi = "0.29"

[package.metadata.release]
publish = true
