[package]
name = "diaryx_cloudflare"
description = "Cloudflare Workers adapter for Diaryx server"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false

[dependencies]
diaryx_core = { path = "../diaryx_core", default-features = false }
diaryx_server = { path = "../diaryx_server" }
diaryx_sync = { path = "../diaryx_sync", default-features = false, features = ["protocol", "doc-server"] }
worker = { version = "0.7", features = ["d1"] }
yrs = { version = "0.25", features = ["sync"] }
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v5", "js"] }
rand = "0.8"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
console_error_panic_hook = "0.1"
url = "2"
urlencoding = "2"

[build-dependencies]
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
