[package]
name = "diaryx_cloudflare_e2e"
description = "End-to-end contract tests that drive `diaryx_cloudflare` through `wrangler dev`"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
publish = false

# This crate exists solely to host native-target tests that spawn
# `bunx wrangler dev` in `../diaryx_cloudflare` and drive the worker over
# HTTP via the shared `diaryx_server::contract` suite. `diaryx_cloudflare`
# itself is a `wasm32-unknown-unknown` crate and is excluded from the
# workspace build graph — so the test code can't live alongside its source.
#
# There is no library or binary target; all content lives in `tests/`.

[lib]
path = "src/lib.rs"

[dependencies]
# The `WranglerDev` fixture + `sign_in_dev` helper live in this crate's lib
# so test binaries can share them. They use `tokio` + `reqwest` at runtime,
# so they're regular deps here (not dev-only).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = { workspace = true }

[dev-dependencies]
diaryx_server = { workspace = true, features = ["reqwest-dispatcher"] }
# Needed by `tests/sync_plugin_e2e.rs` to drive the sync plugin WASM against
# wrangler dev. Mirrors the deps used by `crates/plugins/diaryx_sync_extism`
# for its own sync_server-based E2E.
diaryx_extism = { workspace = true, features = ["testing", "http"] }
diaryx_sync_extism = { path = "../plugins/diaryx_sync_extism" }
# FutureExt::catch_unwind in tests/contract.rs so a single failed assertion
# doesn't abort the rest of the suite (wrangler startup is 60s+; we want to
# see every drift in one run, not one-at-a-time).
futures = "0.3"
# The URL-corpus fuzz scenario in tests/sync_plugin_e2e.rs decodes bodies
# returned as base64 by the plugin's NsGetObject command.
base64 = "0.22"
