[package]
name = "diaryx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Core library for Diaryx - a tool to manage markdown files with YAML frontmatter"
keywords = ["diary", "journal", "markdown", "frontmatter"]
categories = ["text-processing"]

[dependencies]
chrono.workspace = true
indexmap.workspace = true
log = "0.4"
pathdiff = "0.2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10"
thiserror.workspace = true
async-trait = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "rng-getrandom"], optional = true }

# Optional dependencies
ts-rs = { version = "10", features = ["serde-json-impl", "indexmap-impl", "no-serde-warnings"], optional = true }

# Native-only dependencies (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0"
futures-lite = "2"
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Add wasm-bindgen when we need JS interop
# wasm-bindgen = "0.2"

[features]
# TypeScript binding generation (build-time only, not needed in WASM)
typescript = ["dep:ts-rs"]

# SQLite database support (enables Database error variant with rusqlite From impl)
database = ["dep:rusqlite"]

# UUID generation for workspace registry IDs
uuid = ["dep:uuid"]

# Browser WASM support (uuid/js for browser crypto)
browser-js = ["uuid", "uuid/js"]

# Default features — enabled for native builds (CLI, Tauri, Apple, Extism guests).
# diaryx_wasm uses default-features = false to exclude these from the WASM binary.
# The `typescript` feature is opt-in (enabled by diaryx_wasm for binding generation).
default = ["uuid"]

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
