[package]
name = "diaryx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Core library for Diaryx - a tool to manage markdown files with YAML frontmatter"
keywords = ["diary", "journal", "markdown", "frontmatter"]
categories = ["text-processing"]

[dependencies]
chrono.workspace = true
indexmap.workspace = true
log = "0.4"
pathdiff = "0.2"
# ryu is already a transitive dep via serde_json. Depending on it directly
# lets us format f64 values for user-visible display (YamlValue::Display)
# without pulling in `core::num::flt2dec` — Rust's stdlib Dragon4/Grisu
# float formatter is ~15 KB of WASM code, which we avoid this way.
ryu = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2 = "0.10"
thiserror.workspace = true
async-trait = "0.1"
# Used by PluginRegistry::init_all to drive plugin init futures concurrently
# via FuturesUnordered. `default-features = false, features = ["std"]`
# avoids pulling in the executor and io modules we don't need; this also
# keeps the WASM build slim.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "rng-getrandom"], optional = true }

# Optional dependencies
ts-rs = { version = "10", features = ["serde-json-impl", "indexmap-impl", "no-serde-warnings"], optional = true }

[features]
# TypeScript binding generation (build-time only, not needed in WASM)
typescript = ["dep:ts-rs"]

# UUID generation for workspace registry IDs
uuid = ["dep:uuid"]

# Browser WASM support (uuid/js for browser crypto)
browser-js = ["uuid", "uuid/js"]

# Default features — enabled for native builds (CLI, Tauri, Apple, Extism guests).
# diaryx_wasm uses default-features = false to exclude these from the WASM binary.
# The `typescript` feature is opt-in (enabled by diaryx_wasm for binding generation).
default = ["uuid"]

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[dev-dependencies]
tempfile = "3"
futures-lite = "2"
