[package]
name = "diaryx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Core library for Diaryx - a tool to manage markdown files with YAML frontmatter"
keywords = ["diary", "journal", "markdown", "frontmatter"]
categories = ["text-processing"]

[dependencies]
crossfs.workspace = true
diaryx_ark.workspace = true
chrono.workspace = true
indexmap.workspace = true
# YAML backend for the `yaml`/`frontmatter` modules. `fig` is a Zig-backed
# parser/editor; its build.rs compiles the Zig static lib via `zig build`
# (zig is a build req).
fig.workspace = true
log = "0.4"
pathdiff = "0.2"
# Format f64 values for user-visible display (yaml::Value::Display) without
# pulling in `core::num::flt2dec` — Rust's stdlib Dragon4/Grisu float formatter
# is ~15 KB of WASM code, which we avoid this way.
ryu = "1"
serde.workspace = true
# Optional: only enables the `serde_json::Value <-> yaml::Value` bridge impls
# (the `serde-json` feature). Core logic is serde_json-free — JSON is handled
# via `fig`. The WASM build (`diaryx_wasm`, `default-features = false`) excludes
# this, keeping serde_json out of the binary; native consumers get it by default.
serde_json = { workspace = true, optional = true }
sha2 = "0.10"
thiserror.workspace = true
async-trait = "0.1"
# Used by PluginRegistry::init_all to drive plugin init futures concurrently
# via FuturesUnordered. `default-features = false, features = ["std"]`
# avoids pulling in the executor and io modules we don't need; this also
# keeps the WASM build slim.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "rng-getrandom"], optional = true }

# Optional dependencies
ts-rs = { version = "10", features = ["serde-json-impl", "indexmap-impl", "no-serde-warnings"], optional = true }

[features]
# TypeScript binding generation (build-time only, not needed in WASM)
typescript = ["dep:ts-rs"]

# UUID generation for workspace registry IDs
uuid = ["dep:uuid"]

# `serde_json::Value <-> yaml::Value` `From` bridges, for native consumers that
# interop with serde_json (plugins, CLI, extism host). Excluded from the WASM
# build so serde_json stays out of the binary.
serde-json = ["dep:serde_json"]

# Browser WASM support (uuid/js for browser crypto)
browser-js = ["uuid", "uuid/js"]

# Publish pipeline (collect sources → diff → upload via NamespaceProvider port →
# server build). Opt-in so size-sensitive builds don't pull it. Gate values and
# plan summaries use `yaml::Value` (serialized to JSON via `fig`), so this does
# NOT pull `serde_json` into the binary — the WASM publish build stays
# serde_json-free. Native consumers that want the `serde_json <-> yaml` bridge at
# their own provider boundary enable `serde-json` separately (it is in `default`).
publish = []

# Default features — enabled for native builds (CLI, Tauri, Apple, Extism guests).
# diaryx_wasm uses default-features = false to exclude these from the WASM binary.
# The `typescript` feature is opt-in (enabled by diaryx_wasm for binding generation).
default = ["uuid", "serde-json"]

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[dev-dependencies]
tempfile = "3"
futures-lite = "2"
