[package]
name = "diaryx_daily"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Shared daily-entry domain logic for Diaryx plugins"
publish = false

[dependencies]
chrono.workspace = true
chrono-english = "0.1"
serde.workspace = true
thiserror.workspace = true
