[package]
name = "diaryx_daily_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Extism guest plugin for Diaryx daily entry functionality"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = { workspace = true }
diaryx_daily = { workspace = true }
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
pathdiff = "0.2"
