[package]
name = "diaryx_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Extism-based third-party plugin runtime for Diaryx"
publish = false

[features]
default = []
http = ["ureq"]
wasi-runner = ["dep:wasmtime", "dep:wasi-common", "dep:tempfile"]

[dependencies]
diaryx_core.workspace = true
extism = "1.13"
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
log = "0.4"
thiserror.workspace = true
futures-lite = "2"
base64 = "0.22"
ureq = { version = "2", optional = true }

# WASI module runner (for host_run_wasi_module)
wasmtime = { version = "37", optional = true }
wasi-common = { version = "37", optional = true, features = ["sync"] }
tempfile = { version = "3", optional = true }
