[package]
name = "diaryx_extism"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Extism-based third-party plugin runtime for Diaryx"
publish = true

[features]
default = []
http = ["dep:ureq", "dep:urlencoding"]
pulley = ["wasmtime/pulley"]
testing = []
wasi-runner = ["dep:wasi-common", "dep:tempfile"]
ws-transport = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:url"]

[dependencies]
diaryx_core = { workspace = true, default-features = false, features = ["serde-json"] }
diaryx_native = { workspace = true }
chrono.workspace = true
extism = "1.30"
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
log = "0.4"
thiserror.workspace = true
futures-lite = "2"
base64 = "0.22"
sha2 = "0.10"
ureq = { version = "3", optional = true }
urlencoding = { version = "2", optional = true }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"], optional = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2", optional = true }

# Used directly to configure the wasmtime engine (e.g. Pulley interpreter on iOS)
# and by the WASI module runner. These MUST track the wasmtime version that
# `extism` depends on (it re-exports wasmtime and `with_wasmtime_config` takes
# wasmtime's `Config`) — bump all three together or the graph ends up with two
# wasmtime versions and the `Config` types stop unifying.
wasmtime = "43"
wasi-common = { version = "43", optional = true, features = ["sync"] }
tempfile = { version = "3", optional = true }

[package.metadata.release]
# Extism runtime library should be published
publish = true
