[package]
name = "diaryx_git"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Git version history for Diaryx workspaces"
publish = false

[dependencies]
diaryx_core.workspace = true
git2 = { version = "0.19", default-features = false }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
