[package]
name = "diaryx_math_extism"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Math rendering Extism guest plugin for Diaryx (LaTeX → MathML)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-latex = "0.6"
